Fixed numbering issue for sequence lanes.  Seq lane numbers were not generated correctly when copying, adding, or rearranging seq lanes.  GNOM-1814